# distributed-ml-mpi

./: .__afs0364  .__afs07B7  .__afs0D84  .__afs1B25  .__afs2521  .__afs2FB2  .__afs3194  .__afs3365  .__afs38CB  .__afs436C  .__afs495A  .__afs5134  .__afs52F8  .__afs54B7  .__afs61AB  .__afs6E73  .__afs74C1  .__afs7999  .__afs7B4B  .__afs8AB4  .__afs962A  .__afs9714  .__afs9939  .__afs9A64  .__afs9D79  .__afsA0DD  .__afsA6F6  .__afsBB4A  .__afsBDDF  .__afsBF64  .__afsCD52  .__afsDB5A  .__afsDC79  .__afsDEF1  .__afsE7B9  .__afsEA32  .__afsED75  .__afsF48C  .__afsFB2D  .__afsFF01  (+49 more)
data/: smalldata.csv
example-app/: CMakeLists.txt  cmake.txt  example-app.cpp
pytorch-cpp-nn/: README.md  instructions.txt  main.cpp
